--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
 const TAGS = [
   { key:'Evidence',          label:'✅ Evidence',                 hk:'⌥E / ⌘⇧E', letter:'E', group:'good' },
   { key:'BuildsOnOthers',    label:'✅ Builds on others',         hk:'⌥B / ⌘⇧B', letter:'B', group:'good' },
-  { key:'AsksQuestion',      label:'✅ Asks question',            hk:'⌥Q / ⌘⇧Q', letter:'Q', group:'good' },
+  { key:'AsksQuestion',      label:'✅ Asks question',            hk:'⌥? / ⌘⇧?', letter:'?', group:'good' },
 
   { key:'Clarifies',         label:'✅ Clarifies / summarizes',   hk:'⌥S / ⌘⇧S', letter:'S', group:'good' },
   { key:'ConnectsTexts',     label:'✅ Connects across texts',    hk:'⌥X / ⌘⇧X', letter:'X', group:'good' },
