--- a/index.html
+++ b/index.html
@@ -1318,18 +1318,18 @@
 // Keep letters chosen to avoid collisions with participant layer as much as possible.
 const TAGS = [
   { key:'Evidence',          label:'✅ Evidence',                 hk:'⌥E / ⌘⇧E', letter:'E', group:'good' },
-  { key:'BuildsOnOthers',    label:'✅ Builds on others',         hk:'⌥B / ⌘⇧B', letter:'B', group:'good' },
+  { key:'BuildsOnOthers',    label:'✅ Pushes thinking',          hk:'⌥P / ⌘⇧P', letter:'P', group:'good' },
   { key:'AsksQuestion',      label:'✅ Asks question',            hk:'⌥U / ⌘⇧U', letter:'U', group:'good' },
 
   { key:'Clarifies',         label:'✅ Clarifies / summarizes',   hk:'⌥S / ⌘⇧S', letter:'S', group:'good' },
   { key:'ConnectsTexts',     label:'✅ Connects across texts',    hk:'⌥X / ⌘⇧X', letter:'X', group:'good' },
-  { key:'WrongButBold',      label:'🟡 Wrong but bold',           hk:'⌥W / ⌘⇧W', letter:'W', group:'good' },
+  { key:'WrongButBold',      label:'🟡 Incorrect but bold',       hk:'⌥I / ⌘⇧I', letter:'I', group:'good' },
 
   { key:'Dominates',         label:'⚠️ Dominates',                hk:'⌥D / ⌘⇧D', letter:'D', group:'warn' },
   { key:'OffTopic',          label:'⚠️ Off-topic',                hk:'⌥O / ⌘⇧O', letter:'O', group:'warn' },
   { key:'Repeats',           label:'⚠️ Repeats point',            hk:'⌥R / ⌘⇧R', letter:'R', group:'warn' },
 
-  { key:'GreatInsight',      label:'🌟 Great insight',            hk:'⌥I / ⌘⇧I', letter:'I', group:'star' },
+  { key:'GreatInsight',      label:'🌟 Brilliant insight',        hk:'⌥B / ⌘⇧B', letter:'B', group:'star' },
 ];
 
 // Map letter -> tag key for hotkey handling
