--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
     <div class="topbar-inner">
       <div class="brand">
         <h1>Discussion Tracker</h1>
-        <div class="sub">live facilitation + post-discussion analysis</div>
+        <div class="sub">Always free * Support is appreciated</div>
       </div>
 
       <div class="controls">
