--- a/index.html
+++ b/index.html
@@ -942,6 +942,12 @@
 
         <button id="exportScreenshotButton" class="btn ghost" style="display:none;" onclick="exportScreenshot()">
           📷 Screenshot / Print
+
+          <button class="btn ghost"
+        onclick="window.open('https://venmo.com/Ari-Hagler-2','_blank')"
+        title="This tool is always free for teachers. If you find it useful for your classroom, feel free to buy me a caffeinated beverage.">
+  ☕ Buy Me Caffeine
+</button>
         </button>
       </div>
     </div>
