--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
     <div id="discussionDetails" class="setup-card">
       <div class="setup-row">
         <label for="discussionTitle">Discussion Title:</label>
-        <input type="text" id="discussionTitle" placeholder="e.g., Arab Spring Seminar (B Block)" required />
+        <input type="text" id="discussionTitle" placeholder="e.g., The French Revolution (2nd Period)" required />
         <button class="btn secondary" onclick="startDiscussion()">▶ Start</button>
       </div>
       <div class="tiny-note">
